# lyrics-video-creator

./: .env.template  .gitignore  04_generate_movie.py  LICENSE  README.md  pyproject.toml
backend/: .gitignore  01_download_music.py  02_align_lyrics.py  03_translate_lyrics.py  main.py  pyproject.toml
backend/src/lyrics_video_creator/: app.py  font.py  lib.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: FileUpload.tsx  Layout.tsx  LyricsInput.tsx  SubtitleSettingsPanel.tsx  VideoGenerator.tsx  VideoPreview.tsx
frontend/src/components/ui/: Slider.tsx  Switch.tsx
frontend/src/types/: index.ts
src/lyrics-video-creator/: app.py  lib.py
